# pibot

./: .dockerignore  .env.example  .gitignore  .pylintrc  .readthedocs.yaml  .release-please-manifest.json  .releaserc.yaml  AGENTS.md  CustomPlayer.py  Dockerfile  Player.py  README.md  bot.py  database.py  errors.py  pibot.py  pibotplayer.py  player.py  playerview.py  pyproject.toml  release-please-config.json  requirements.txt  test_bot.py
.circleci/: config.yml
.cursor/agents/: documenter.md  formatter.md  security-reviewer.md  tester.md
.cursor/skills/commit/: SKILL.md
.cursor/skills/lint/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: -beta--bug-report.md  bug_report.md
.github/workflows/: check.yml  code-quality.yml  dependabot-auto-merge.yml  docker-publish.yml  helm-publish.yml  lint.yml  main_pibot.yml  pypi-publish.yml  release.yml
charts/pibot/: Chart.yaml  README.md  values.yaml
charts/pibot/templates/: Deployment.yaml  Secret.yaml  _helpers.tpl
cogs/: admin.py  ai.py  error_handler.py  general.py  music.py
docs/: conf.py  index.rst  requirements.txt
docs/source/: modules.rst  pibot.ai_gateway.rst  pibot.cogs.admin.rst  pibot.cogs.general.rst  pibot.cogs.rst  pibot.cogs.summarize.rst  pibot.cogs.translations.rst  pibot.guild_settings.rst  pibot.rst  pibot.translation_service.rst
local/: docker-compose.yml
src/TranslationService/: deeplTranslator.py  translator.py
src/WhiteoutSurvival/: allianceRepository.py  playerRepository.py
src/WhiteoutSurvival/models/: alliance.py  player.py
src/pibot/: __init__.py  __main__.py  bot.py  config.py  database.py  errors.py  pibot.py  run.py  settings.py
src/pibot/TranslationService/: deeplTranslator.py  translator.py
src/pibot/ai_gateway/: __init__.py  cloudflare_gateway.py  gateway.py
src/pibot/ai_service/: __init__.py  ai_service.py  cloudflare_gateway.py
src/pibot/cogs/: __init__.py  admin.py  devTools.py  error_handler.py  general.py  settings.py  summarize.py  translations.py  whiteoutSurvival.py
src/pibot/cogs/admin/: __init__.py  cog.py  config.py
src/pibot/cogs/general/: __init__.py  cog.py  config.py
src/pibot/cogs/settings/: __init__.py  cog.py
src/pibot/cogs/summarize/: __init__.py  cog.py  config.py
src/pibot/cogs/translations/: __init__.py  cog.py  config.py
src/pibot/guild_settings/: config.py  decorators.py  env.py  env_defaults.py  errors.py  feature.py  feature_commands.py  feature_mixin.py  general.py  model.py  registry.py  serializer.py  service.py  setting.py  setting_type.py  settings_panel.py  settings_ui.py  store.py  util.py
src/pibot/guild_settings/ui/: editors.py
src/pibot/translation_service/: __init__.py  deepl_translator.py
tests/: conftest.py  test_cog_admin.py  test_config.py  test_guild_settings.py  test_guild_settings_model.py  test_guild_settings_service.py  test_guild_settings_store.py  test_settings_service.py  test_settings_ui.py
