[project]
name = "pibot-discord"
description = "Multi-purpose Discord Bot"
keywords = ['python', 'discord', 'bot', 'moderation', 'fun', 'utility']
authors = [
    { name = "Tobias Goetz", email = "contact@tobiasgoetz.com" }
]
version = "3.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepl==1.28.0",
    "discord-py==2.6.4",
    "pymongo==4.16.0",
    "python-dotenv==1.2.1",
    "pytimeparse == 1.1.8",
]

[build-system]
requires = ["uv_build~=0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pibot"

[project.urls]
Homepage = "https://github.com/TobiasGoetz/pibot"
Issues = "https://github.com/TobiasGoetz/pibot/issues"

[dependency-groups]
dev = [
    "build",
    "ruff",
]
docs = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.scripts]
pibot = "pibot:run"

[tool.ruff]
line-length = 120
exclude = [
    "*/__init__.py",
]
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "E501",
    "UP", # pyupgrade
    "D", # pydocstyle
]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
]
