[project]
name = "pibot-discord"
description = "Multi-purpose Discord Bot"
keywords = ['python', 'discord', 'bot', 'moderation', 'fun', 'utility']
authors = [{ name = "Tobias Goetz", email = "contact@tobiasgoetz.com" }]
version = "3.5.2"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "deepl~=1.28",
    "discord-py~=2.7",
    "openai~=2.41",
    "pydantic~=2.13",
    "pydantic-settings>=2.14.2",
    "pymongo~=4.16",
    "python-dotenv~=1.2",
    "pytimeparse~=1.1",
]

[build-system]
requires = ["uv_build~=0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pibot"

[project.urls]
Homepage = "https://github.com/TobiasGoetz/pibot"
Issues = "https://github.com/TobiasGoetz/pibot/issues"

[dependency-groups]
dev = [
    "build~=1.5",
    "pytest~=9.0",
    "pytest-asyncio~=1.4",
    "ruff~=0.15",
    "testcontainers[mongodb]~=4.14",
    "ty~=0.0",
]
docs = ["sphinx~=9.1", "sphinx-rtd-theme~=3.1"]

[project.scripts]
pibot = "pibot:run"

[tool.ruff]
line-length = 120
exclude = ["*/__init__.py"]
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "E501",
    "UP",   # pyupgrade
    "D",    # pydocstyle
]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
]
